--- a/EventManagementSystem.csproj
+++ b/EventManagementSystem.csproj
@@ -71,9 +71,17 @@
     <Content Include="App_Data\Event_Data_log.ldf">
       <DependentUpon>Event_Data.mdf</DependentUpon>
     </Content>
+    <Content Include="Home.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Home.aspx.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Home.aspx.designer.cs">
+      <DependentUpon>Home.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
